fix navbar z-index

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -3,7 +3,6 @@
 .navbar {
   transition: 0.5;
   background-color: transparent;
-  z-index: 6;
   &-brand {
     width: 100px;
   }
